--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0; URL='https://www.dmzinfo.app'" />
+    <meta http-equiv="refresh" content="0; URL='https://dmzinfo.vercel.app/'" />
     <title>404 - redirect</title>
 </head>
 
 <body></body>
 <script>
-    window.location.href = "https://www.dmzinfo.app";
+    window.location.href = "https://dmzinfo.vercel.app/";
 </script>
 
 </html>
